--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-fetch": "^3.3.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^6.30.1",
     "supabase": "^2.48.3"
   },
   "devDependencies": {
