Add Initial Masterlist CRUD for Admin Account
Not yet listing users due to Edge function i think?

--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhY
 
 VITE_LOGIN_FUNCTION_URL=https://nrkqwgixfhnmezddynjq.supabase.co/functions/v1/swift-handler
 VITE_REGISTER_FUNCTION_URL=https://nrkqwgixfhnmezddynjq.supabase.co/functions/v1/quick-function
+
+VITE_ADMIN_FN_URL="https://nrkqwgixfhnmezddynjq.functions.supabase.co/admin-user-management"
